# stable-swapper

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
evm/: Makefile  README.md  foundry.toml
evm/script/: DeployStableSwapper.s.sol  GenerateStorageLocation.s.sol  VerifyDeployment.s.sol
evm/src/: SingleRoleAuthority.sol  StableSwapper.sol  TwoStepSingleRoleAuthority.sol
evm/test/: DeployStableSwapper.t.sol
solana/: .gitignore  Anchor.toml  README.md  package.json
solana/docs/: flipcash-swap-runbook.md
solana/programs/scaas-liquidity/: Cargo.toml
solana/programs/scaas-liquidity/src/: errors.rs  lib.rs  state.rs  utils.rs
solana/runbooks/: DEVNET_DEPLOYMENT-20260120.md  MAINNET_DEPLOYMENT-20251219.md  MAINNET_DEPLOYMENT-20260108.md  MAINNET_DEPLOYMENT_RUNBOOK.md
solana/scripts/: 01-initialize-pool.ts  02-add-token.ts  04-test-swap.ts  _role-rotation.ts  emergency-pause-liquidity.ts  emergency-pause-swaps.ts  emergency-withdraw.ts  migrate-authorities.ts  update-configure-authority.ts  update-operations-authority.ts  update-pause-authority.ts  update-token-status.ts  update-treasury-authority.ts  update-unpause-authority.ts  update-withdraw-recipient.ts  verify-pool.ts  whitelist-add.ts  whitelist-remove.ts
solana/tests/: scaas-liquidity.ts  stable-swapper.ts
svm/: README.md  package-lock.json  package.json
svm/runbooks/: MAINNET_DEPLOYMENT-20251219.md
svm/scripts/: 03-deposit-liquidity.ts  update-operations-authority.ts  whitelist-toggle.ts
svm/tests/: scaas-liquidity.ts
(+40 files in other folders)
