[package]
name = "scaas-liquidity"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scaas_liquidity"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Enables `init_legacy_for_test` + `migrate_authorities_for_test` instructions that build
# parametric-PDA legacy pools for the migration happy-path test. Never enable in production.
test-helpers = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

